<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
        <ImageView
            android:id="@+id/girl1"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/girl_character"
            android:contentDescription="@string/girl_character_1" />
        <Button
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">
        <ImageView
            android:id="@+id/girl2"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/girl_character"
            android:contentDescription="@string/girl_character_2" />
        <Button
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">
        <ImageView
            android:id="@+id/girl3"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/girl_character"
            android:contentDescription="@string/girl_character_3" />
        <Button
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
        <ImageView
            android:id="@+id/girl4"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/girl_character"
            android:contentDescription="@string/girl_character_4" />
        <Button
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>